typesafe_builder_derive/tests/ui/3.stderr
error[E0599]: no method named `build` found for struct `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty>` in the current scope
  --> tests/ui/3.rs:16:35
   |
7  |     #[derive(Builder)]
   |              ------- method `build` not found for this struct
...
16 |     let user = UserBuilder::new().build();
   |                                   ^^^^^ method not found in `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty>`
   |
   = note: the method was found for
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderFilled>`
           - `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderEmpty>`
           - `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderFilled>`
